--- a/wia.html
+++ b/wia.html
@@ -42,19 +42,19 @@
                          <img src="assets/images/logo-184x184.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">Atera</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="home.html">Atera</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="##.html"><span class="mbri-preview mbr-iconfont mbr-iconfont-btn"></span>What is Atera?</a>
+                    <a class="nav-link link text-white display-4" href="wia.html"><span class="mbri-preview mbr-iconfont mbr-iconfont-btn"></span>What is Atera?</a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own website for free</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
