--- a/wia.html
+++ b/wia.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -68,7 +68,7 @@
                         WHAT IS ATERA?</h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">
                         This page shows what Atera is and what we do here!</p>
-                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="#.html">HOME</a></div>
+                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="home.html">HOME</a></div>
 
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
