--- a/wia.html
+++ b/wia.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -120,8 +120,7 @@
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
                                 We use "Skript" for our server</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
-                                Mobirise give you the freedom to develop as many websites as you like given the fact that it is desktop app. Mobirise is the perfect gide.
-                            </p>
+                                What is Skript?, skript is a coding language used in minecraft to simplify java code, our development team are very well trained with this coding language.<br></p>
                         </div>
                     </div>
                 </div>
