--- a/wia.html
+++ b/wia.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -129,12 +129,11 @@
                 <div class="card p-3 align-center col-12 col-md-6 col-lg-4">
                     <div class="panel-item p-3">
                         <div class="card-img pb-3">
-                            <span class="mbri-touch-swipe mbr-iconfont"></span>
+                            <span class="mbr-iconfont mbri-browse"></span>
                         </div>
                         <div class="card-text">
                             <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
-                                  200
-                            </h3>
+                                  DETAILED AND PROFESSIONAL</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
                                 Trendy websites blocks
                             </h4>
