create github pages

--- a/wia.html
+++ b/wia.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -118,7 +118,7 @@
                             <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
                                   CUSTOM CODED</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
-                                We use "Skript" for our server</h4>
+                                We use Skript for our server</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
                                 What is Skript?, skript is a coding language used in minecraft to simplify java code, our development team are very well trained with this coding language.<br></p>
                         </div>
@@ -133,7 +133,7 @@
                         </div>
                         <div class="card-text">
                             <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
-                                  DETAILED AND PROFESSIONAL</h3>
+                                  DETAILED,&nbsp;<br>PROFESSIONAL</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
                                 Trendy websites blocks
                             </h4>
