create github pages

--- a/wia.html
+++ b/wia.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -133,10 +133,8 @@
                         </div>
                         <div class="card-text">
                             <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
-                                  DETAILED,&nbsp;<br>PROFESSIONAL</h3>
-                            <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
-                                Trendy websites blocks
-                            </h4>
+                                  DETAILED<br></h3>
+                            <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Our server looks great</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
                                     Choose from the large selection of latest pre-made blocks - jumbotrons, hero images, parallax scrolling, video backgrounds, hamburger menu, sticky header and more.
                             </p>
