create github pages

--- a/wia.html
+++ b/wia.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -111,14 +111,14 @@
                 <div class="card p-3 align-center col-12 col-md-6 col-lg-4">
                     <div class="panel-item p-3">
                         <div class="card-img pb-3">
-                            <span class="mbr-iconfont mbri-paper-plane"></span>
+                            <span class="mbr-iconfont mbri-code"></span>
                         </div>
 
                         <div class="card-text">
                             <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
-                                  CUSTOM CODED</h3>
+                                  CUSTOM&nbsp;</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
-                                We use Skript for our server</h4>
+                                We use Skript language for our server</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
                                 What is Skript?, skript is a coding language used in minecraft to simplify java code, our development team are very well trained with this coding language.<br></p>
                         </div>
@@ -135,9 +135,7 @@
                             <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
                                   DETAILED<br></h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Our server looks great</h4>
-                            <p class="mbr-content-text mbr-fonts-style display-7">
-                                    Choose from the large selection of latest pre-made blocks - jumbotrons, hero images, parallax scrolling, video backgrounds, hamburger menu, sticky header and more.
-                            </p>
+                            <p class="mbr-content-text mbr-fonts-style display-7">The development team have spent countless hours working on making atera the best prison server around.</p>
                         </div>
                     </div>
                 </div>
@@ -145,18 +143,14 @@
                 <div class="card p-3 align-center col-12 col-md-6 col-lg-4">
                     <div class="panel-item p-3">
                         <div class="card-img pb-3">
-                            <span class="mbri-responsive mbr-iconfont"></span>
+                            <span class="mbr-iconfont mbri-idea"></span>
                         </div>
                         <div class="card-text">
-                            <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
-                                  300
-                            </h3>
+                            <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">SUGGEST</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
-                                Bootstrap
-                            </h4>
+                                Want to suggest your ideas?</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
-                                    One of Bootstrap's big point is responsiveness and obirise male effective use of this by genereating highly responsive website for you.
-                            </p>
+                                    We allow people to suggest what they want added. we might add them if they support our criteria.</p>
                         </div>
                     </div>
                 </div>
