create github pages

--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -68,7 +68,7 @@
                     WELCOME TO ATERA</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Make sure to stay safe, and make sure that you be civil around the website</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="wia.html">WHAT IS ATERA?</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="wia.html">WHAT IS ATERA?</a> <a class="btn btn-md btn-primary display-4" href="wia.html#form1-8">SUGGESTIONS</a></div>
             </div>
         </div>
     </div>
