--- a/forums.html
+++ b/forums.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-a" data-rv-view="10" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-a" data-rv-view="10" style="background-color: rgb(255, 255, 255);">
 	<style>.block {padding-bottom:0px; padding-top:0px;}</style>		
             
 
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class="mbr-section__container">
-                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><div class="tiny"><h1>HTML Code</h1></div>
+                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><div class="tiny"></div>
 						</div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
 </section>
 
 <section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-b" data-rv-view="12" style="background-color: rgb(255, 255, 255);">
-	<style>.block {padding-bottom:0px; padding-top:0px;}</style>		
+	<style>.block {padding-bottom:80px; padding-top:80px;}</style>		
             
 
     <div class="mbr-section__container mbr-section__container--isolated container">
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="mbr-section__container">
-                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><div class="tiny"><h1>&lt;!--Begin Website Toolbox Forum Embed Code--&gt;<br>&lt;div id="wtEmbedCode"&gt;&lt;script type="text/javascript" id="embedded_forum" src="https://aurorionz.discussion.community/js/mb/embed.js"&gt;&lt;/script&gt;<br>&lt;noscript&gt;&lt;a href="https://aurorionz.discussion.community/"&gt;Forum&lt;/a&gt;&lt;/noscript&gt;&lt;/div&gt;<br>&lt;!--End Website Toolbox Forum Embed Code--&gt;<br></h1></div>
+                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><div class="tiny"><!--Begin Website Toolbox Forum Embed Code--><div id="wtEmbedCode"><script type="text/javascript" id="embedded_forum" src="https://aurorionz.discussion.community/js/mb/embed.js"></script><noscript>&lt;a href="https://aurorionz.discussion.community/"&gt;Forum&lt;/a&gt;</noscript></div><!--End Website Toolbox Forum Embed Code--></div>
 						</div>
                     </div>
                 </div>
