--- a/forums.html
+++ b/forums.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-a" data-rv-view="10" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-a" data-rv-view="10" style="background-color: rgb(255, 255, 255);">
 	<style>.block {padding-bottom:0px; padding-top:0px;}</style>		
             
 
@@ -94,7 +94,7 @@
                 <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__left col-sm-8">
                     <div class="mbr-section__container mbr-section__container--middle">
                         <div class="mbr-header mbr-header--auto-align mbr-header--wysiwyg">
-                            <div class="mbr-header__text tiny"><h3>Block Title</h3></div>
+                            <div class="mbr-header__text tiny"><h3></h3></div>
                         </div>
                     </div>
                     <div class="mbr-section__container">
