create github pages

--- a/forums.html
+++ b/forums.html
@@ -54,37 +54,8 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-a" data-rv-view="10" style="background-color: rgb(255, 255, 255);">
-	<style>.block {padding-bottom:0px; padding-top:0px;}</style>		
-            
-
-    <div class="mbr-section__container mbr-section__container--isolated container">
-        <div class="row block">
-            <div class="mbr-box mbr-box--fixed mbr-box--adapted">
-                <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__left col-sm-8">
-                    <div class="mbr-section__container mbr-section__container--middle">
-                        <div class="mbr-header mbr-header--auto-align mbr-header--wysiwyg">
-                            <div class="mbr-header__text tiny"><h3>Block Title</h3></div>
-                        </div>
-                    </div>
-                    <div class="mbr-section__container">
-                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><div class="tiny"></div>
-						</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-	<div>
-		<script src="https://cdn.tinymce.com/4/tinymce.min.js"></script>
-		<script>tinymce.init({selector:'.tiny', inline: true, plugins: ['advlist autolink lists link image media charmap print preview anchor','searchreplace visualblocks code fullscreen','insertdatetime table contextmenu paste code textcolor colorpicker textpattern'],  toolbar1: 'insertfile undo redo | styleselect | bold italic forecolor backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image media | code',});</script>
-	</div>
-	
-</section>
-
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-a" data-rv-view="12" style="background-color: rgb(255, 255, 255);">
-	<style>.block {padding-bottom:40px; padding-top:40px;}</style>		
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-a" data-rv-view="10" style="background-color: rgb(255, 255, 255);">
+	<style>.block {padding-bottom:80px; padding-top:80px;}</style>		
             
 
     <div class="mbr-section__container mbr-section__container--isolated container">
@@ -108,10 +79,7 @@
         </div>
     </div>
 
-	<div>
-		<script src="https://cdn.tinymce.com/4/tinymce.min.js"></script>
-		<script>tinymce.init({selector:'.tiny', inline: true, plugins: ['advlist autolink lists link image media charmap print preview anchor','searchreplace visualblocks code fullscreen','insertdatetime table contextmenu paste code textcolor colorpicker textpattern'],  toolbar1: 'insertfile undo redo | styleselect | bold italic forecolor backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image media | code',});</script>
-	</div>
+	
 	
 </section>
 
