--- a/forums.html
+++ b/forums.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header1 cid-ri3ZdW8Bp5 mbr-parallax-background" id="header1-f">
+<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="header1 cid-ri3ZdW8Bp5 mbr-parallax-background" id="header1-f">
 
     
 
@@ -78,7 +78,7 @@
 
 <section class="mbr-section" id="witsec-custom-html-block-g" data-rv-view="152" style="background-color: rgb(255, 255, 255);">
  
- <div class="witsec-custom-html-container elements-content" style="padding-top: 1rem; padding-bottom: 1rem;">
+ <div class="witsec-custom-html-container elements-content" style="padding-top: 0rem; padding-bottom: 0rem;">
      
     <div class="mbr-section__container block" style="width: 100%;"><div id="wtEmbedCode"><script type="text/javascript" id="embedded_forum" src="https://aurorionz.discussion.community/js/mb/embed.js"></script>
 <noscript>&lt;a href="https://aurorionz.discussion.community/"&gt;Forum&lt;/a&gt;</noscript></div>
