create github pages

--- a/wia.html
+++ b/wia.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -203,11 +203,11 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you, we appreciate your suggestion!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="M+fJkIUoMEpt9yxyKclcltEnMAgyt/Lj/WxBSzPyEsL3VlpMp1G7G2kycuhvfOkq0rPV28rO6cdCs85QkJNwZcEOqfvzbIFJHeH1t4fvFoKwVI0tPUw1VYtkzdx05NK2">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VmRjQ0NRPF258wwwiDZQrBBmCOMsPx4aHdouXtUkdg0Yw81z06mOtnuLxq5w8XkxK+1GSarXvZbWqKlWhCdm7ESgoVHFRpUEn6pdk+HUCrLv2GVdkbK6xfHGj8KSLum5">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
-                                    <label class="form-control-label mbr-fonts-style display-7" for="name-form1-8">Name</label>
+                                    <label class="form-control-label mbr-fonts-style display-7" for="name-form1-8">Name (IN-GAME NAME)</label>
                                     <input type="text" class="form-control" name="name" data-form-field="Name" required="" id="name-form1-8">
                                 </div>
                             </div>
