--- a/forums.html
+++ b/forums.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-184x184.png" type="image/x-icon">
   <meta name="description" content="Website Builder Description">
-  <title>Forums</title>
+  <title>Forums - Atera</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header1 cid-ri3ZdW8Bp5 mbr-parallax-background" id="header1-f">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section class="header1 cid-ri3ZdW8Bp5 mbr-parallax-background" id="header1-f">
 
     
 
