create github pages

--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you, we appreciate your suggestion!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="L+Ildflypj/nCxS3qScb/xSaq1l8ROjwq94dm9L4gk3uNHEJihpG/TK6BU681fFaRL4ZAOI7xrwwE9zrl68o44yyY/5XR55xBASU2xzerCZXPgrDD4DTe4LMLQecQB0o">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MzlucrMxXBTse//YjbOBkBaow/1OiKHOCW4C5HloySzyo/9dviZY+rH09LCw0vhHximWlr/LayYsVsUIbs6N7kk0KWfcIMgDZ+VkbE64D+iuG3egG6Fm3grtZD2KfAO+">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
