create github pages

--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you, we appreciate your suggestion!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5t59YzWSGeQqtIrgQKFiAWH+lOI5RZRSIKWk6tvl00kZA9UPx65/KFWvVScOg/YU6ad9SxDZjMi0We1WgO3+VQ9//R5gCzkI7C8Pa30U3BRxfDt0i/ANgSJZpWFtkmfV">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="K5mO64iFJ9PNWmL4xMmyoKhNLgrpkWhv//yN8eCilpmocya2IuNrKrjTZpj57FZOAADjKBiJnZtM/qz8gdx+FerWcOkit9h9YgU6k6KGueqrMyCiYIMk7ol617gMCKcn">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
