create github pages

--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you, your suggestion is always appreciated</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="joxSjUVeHV1K9cBWmzQgJ8UmqJakGBvB/QY6/haMIUW8regcWAcG/HAqJtUcSfZlsgJMiIz6cTWo57EqdKNpNYelV8pRg6mdAcGeFzDln/dDQBFvXuqWHkqTQ/aOnvHg">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="g+ldiEShclqS1NM4F1qCQtql+myZzXkZSVxVzeChRMDSHnEEpofs8+uubFdqpJAJlSHiwZ0F02W2fFPBemNtpE/e4WYbYPGVOLCUrUjjmPxar3boomh2iLWvmmP7EkWy">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
