create github pages

--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you, your suggestion is always appreciated</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MK4DnemOlmOm+ZlA26wWJnVWnA4VxkzKHM//738kJ/QJwratexc/+rs/9MXQ/MAmU9hTvTnmDp7tv9zhSn6iFasH9CZ10fJnpXuS1ieslRtX+GmBlg+ICwx4EH+9wGDi">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Q/zJNTutCoN1dm8VuKCCSttEYzssl12O71C6KgSk1up3P5fLg1ufKvb12wHfo4WDGW7SaKS95lmooD54tAsCWQUpopSjetRGUUYPDCa/xuSx7X3wmQozHuKnJlIlMswk">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
