create github pages

--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -205,7 +205,7 @@
                 <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ifcIgNRsUfAVPfxhPPHmbnC+dLaP12PHwVjUjjnXD3tld3KJBGKrggOMZ1MIYJd8reeQylLXRXcenV5BKaXIRHtobd63qheZor4kpHiotA/u6x0GDrKRtGNCr9nKEOOk">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iL7TLhieicMsFET1QfRE9BEQ/NTUfUajtdtsIhgzquar57wxozieocH17FSUiFEwQvfPYy4Mwo6x4ptR4PwPKJpDTKrAkEduyGxcDvkf0noVvi0YoY/iMUz9UC3Ws+Ir">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-d">
                         <span class="input-group-btn">
