create github pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -231,7 +231,7 @@ a {
 
 
 
-<form action="/action_page.php">
+<form action="/index.html">
   <div class="container">
     <h1>Register</h1>
     <p>Please fill in this form to create an account.</p>
