--- a/store.html
+++ b/store.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header1 cid-rjuUJoabEf mbr-parallax-background" id="header1-b">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="header1 cid-rjuUJoabEf mbr-parallax-background" id="header1-b">
 
     
 
